# GeMMax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  setup.py
codestyle/: clang-tidy.py  copyright.py
csrc/: fp8_gemm.cu  fp8_gemm_jit.cu  trivial_gemm.cu
csrc/include/: fp8_gemm.cuh  fp8_gemm_jit.cuh  fp8_gemm_kernels.template  fp8_gemm_types.h  utils.h
include/: cache_manager.hpp  fp8_gemm_template.cuh  fp8_gemm_types.hpp  jit_compiler.hpp  rapidhash.h  test_framework.hpp  utils.h  utils.inl
output_data/: gemm_results.csv  grouped_contiguous_gemm_results.csv
output_data/deep_gemm/: gemm_results.csv  grouped_contiguous_gemm_results.csv
src/: cache_manager.cpp  fp8_gemm_jit_compiler.cu  jit_compiler.cpp  utils.cpp
tests/: test_deepgemm.py  test_gemm.py  test_gemmax.py  test_jit.cpp  test_runtime.cpp  test_template.cpp  test_template.cu
tests/benchmarks/: benchmark_utils.py  test_deepgemm.py  test_deepgemm_stability.py  test_gemmax.py  test_paddle_deepgemm.py
tests/unittests/: test_core.py
visualizations/scripts/: plot.py  plot_deepgemm.py  plot_gemmax.py
